# magolib

./: .gitignore  LICENSE  README.md  pyproject.toml
src/magolib/: __init__.py  magolib.py
tests/: test_lib.py
