[project]
name = "magolib"
description = "A library to format and convert numbers in the Mago unit of measure"
dynamic = ["version"]
dependencies = []
authors = [
  {name = "Alessandro Sartori", email = "alex.sartori1997@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["mago", "unit of measure", "format", "convert"]

[project.urls]
Homepage = "https://github.com/AlexSartori/magolib"
Repository = "https://github.com/AlexSartori/magolib"
Issues = "https://github.com/AlexSartori/magolib/issues"

[tool.setuptools.dynamic]
version = {attr = "magolib.__version__"}
